# contraption

contraption/: .env.example  CHANGELOG.md  CLAUDE.md  Calls.xlsx  Occ.xlsx  README.md  Staff.xlsx  check_data_filtering.py  check_staff_columns.py  check_timestamp_alignment.py  demo_workflow.md  examine_files.py  examine_real_wfm_files.py  pyproject.toml  test_curve_fitting.py  test_excel_fix.py  test_filtering.py  test_relationship_analysis.py  test_service_level.py  test_upload.py  test_wfm_preprocessor.py
contraption/data/: sample_wfm_data.py  wfm_complete_data.xlsx  wfm_core_metrics.xlsx  wfm_performance_metrics.xlsx  wfm_staffing_metrics.xlsx
contraption/docs/: TEST_REPORT.md
contraption/requirements/: dev.txt  requirements.txt
contraption/src/: main.py  service_level_prediction.py
contraption/src/analysis/: relationships.py
contraption/src/convergence/: __init__.py  binary_search.py  engine.py
contraption/src/data/: excel_loader.py  processor.py  wfm_preprocessor.py
contraption/src/models/: curve_fitting.py
contraption/src/visualization/: correlation_plots.py
contraption/tests/: test_application.py
